feat(kpis): return kpis with values set to 0 when missing values
